--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -10,6 +10,8 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "uid": "^2.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -18,7 +20,10 @@
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
