--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "primevue": "^3.39.0",
     "uid": "^2.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
